--- a/package.json
+++ b/package.json
@@ -70,7 +70,10 @@
     "karma-jasmine": "^0.3.5",
     "karma-mocha": "^0.1.10",
     "karma-phantomjs-launcher": "^0.1.4",
+    "lost": "^6.6.3",
     "mocha": "^2.1.0",
+    "postcss-media-minmax": "^2.1.1",
+    "postcss-nested": "^1.0.0",
     "react": "^0.14.3",
     "react-addons-test-utils": "^0.14.3",
     "react-dom": "^0.14.3",
