--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
     "postcss-nested": "^1.0.0",
     "postcss-scss": "^0.1.2",
     "quill": "^0.20.1",
-    "react-color": "^1.3.5",
+    "react-color": "1.3.4",
     "react-jss": "^2.0.1",
     "react-quill": "^0.3.0",
     "react-tether": "^0.1.2",
