--- a/package.json
+++ b/package.json
@@ -79,8 +79,8 @@
     "react-transform-hmr": "^1.0.0",
     "reactify": "^1.0.0",
     "sass-loader": "^2.0.1",
-    "sinon": "^1.12.0",
-    "sinon-chai": "~2.6.0",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0",
     "skin-deep": "^0.13.0",
     "strictify": "^0.2.0",
     "style-loader": "^0.12.4",
